# juce-standalone-pluginhost

./: CMakeLists.txt  README.md
src/: App.cpp  AppWindow.hpp  PluginHost.cpp  PluginHost.h  PluginsManager.cpp  PluginsManager.h  main.cpp
